--- a/gabfest/index.html
+++ b/gabfest/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             overflow: hidden;
             background: black;
+            color: black !important;
         }
         .slideshow {
             position: relative;
